--- a/Data_Acquisition.ipynb
+++ b/Data_Acquisition.ipynb
@@ -211,12 +211,12 @@
     "for idx in z1_5_ids:\n",
     "    get_galaxy_particle_data(id=idx, redshift=redshift, populate_dict=False)\n",
     "    \n",
-    "redshift = 3\n",
-    "for idx in z3_ids:\n",
-    "    if idx in [4519623, -1]:\n",
-    "        pass\n",
-    "    else:\n",
-    "        get_galaxy_particle_data(id=idx, redshift=redshift, populate_dict=False)"
+    "# redshift = 3\n",
+    "# for idx in z3_ids:\n",
+    "#     if idx in [4519623, -1]:\n",
+    "#         pass\n",
+    "#     else:\n",
+    "#         get_galaxy_particle_data(id=idx, redshift=redshift, populate_dict=False)"
    ]
   },
   {
