--- a/Revised_Paper_Figures.ipynb
+++ b/Revised_Paper_Figures.ipynb
@@ -3259,12 +3259,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f50c699-f70a-4a30-b30f-aac42da0c886",
+   "metadata": {},
+   "source": [
+    "# Figures to address referee comments"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f6c5ba15-ec05-4ee9-a55b-366807f8b8e8",
+   "execution_count": 1,
+   "id": "6e77bfc4-08b5-461d-b440-14d28c008ab5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from simulation_data import get\n",
+    "import numpy as np\n",
+    "import h5py\n",
+    "\n",
+    "from simulation_data.galaxies import GalaxyPopulation\n",
+    "my_galaxy_population = GalaxyPopulation()\n",
+    "from simulation_data.galaxies.galaxy import get_galaxy_particle_data, get_stellar_assembly_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ae498615-484f-45b3-af50-04857e43b783",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File('redshift_ids.hdf5', 'r') as f:\n",
+    "    z1_5_ids = f['z1.5_ids'][:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6ad0cea-e4d9-4a4f-9a59-11cfd01b30d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "redshift = 1.5\n",
+    "#this initializes the values in simulation_data.galaxies.galaxy_population\n",
+    "ids = my_galaxy_population.select_galaxies(redshift=redshift, mass_min=10.5, mass_max=12)\n",
+    "\n",
+    "#calculate halo properties and store calculated data\n",
+    "my_galaxy_population.get_galaxy_population_data()"
+   ]
   }
  ],
  "metadata": {
