--- a/Relatives_Galaxy_Abundances.ipynb
+++ b/Relatives_Galaxy_Abundances.ipynb
@@ -25,7 +25,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "24380443-9e29-481b-8389-b0bb23719140",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "with h5py.File('redshift_ids.hdf5', 'r') as f:\n",
